--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@ nav .logo {
 }
 
 nav .logo img {
-    height: 75px;
-    width: 75px;
+    height: 150px;
+    width: 150px;
     border-radius: 50%;
 }
 
@@ -52,12 +52,12 @@ nav ul {
 }
 
 nav ul li {
-    border-bottom: 2px solid rgba(200,200,200, 0.1);
+    border-bottom: 2px solid rgba(200,200,200, 0.2);
     padding: 20px;
 }
 
 nav ul li:first-of-type {
-    border-top: 2px solid rgba(200,200,200, 0.1);
+    border-top: 2px solid rgba(200,200,200, 0.2);
 }
 
 nav ul li a {
@@ -80,16 +80,18 @@ header {
 
 header h1 {
     margin: 0;
+    line-height: 1px;
+    padding-top: 20px;
 }
 
 header p {
     margin: 30px 0;
 }
 
-button, input[type='submit'] {
+button {
     background-color: var(--secondary-color);
     border: 0;
-    border-radius: 5px;
+    border-radius: px;
     color: #ffffff;
     cursor: pointer;
     padding: 8px 12px;
@@ -104,4 +106,30 @@ button:focus {
     position: absolute;
     top: 20px;
     left: 20px;
+}
+
+.sub-heading {
+    color: #ffffff;
+    text-align: center;
+    font-weight: 200;
+    margin-bottom: 60px;
+    padding: 0 200px;
+}
+
+.home {
+    margin: 30px 0;
+    padding: 50px 50px ;
+    background-color: #fff;
+    height: 100%;
+    color: var(--primary-color);
+}
+
+.home-title {
+    text-align: center;
+    font-size: 25px;
+}
+
+.home-text {
+    padding: 0 90px;
+    line-height: 25px;
 }
