--- a/src/App.css
+++ b/src/App.css
@@ -154,57 +154,6 @@ button:focus {
     line-height: 25px;
 }
 
-@media (max-width: 700px) {
-
-    .sub-heading {
-      font-size: 15px;
-      padding: 0 100px;
-    }
-
-    .btn {
-        padding: 8px 20px;
-        font-size: 10px;
-    }
-
-    .home {
-        padding: 10px 20px;
-        margin: 10px 0;
-    }
-
-    .home-title {
-        font-size: 20px;
-    }
-
-    .home-text {
-        font-size: 10px;
-        line-height: 20px;
-        text-align: center;
-    }
-
-}
-
-
-.grid-3 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
-}
-
-@media (max-width: 700px) {
-
-    .grid-3 {
-      grid-template-columns: 1fr;
-    }
-}
-
-.my-3 {
-    margin: 3rem 0;
-}
-
-.ml-3 {
-    margin-left: 5rem;
-}
-
 .modal-1 {
     background-color: #ffffff;
     border-radius: 5px;
@@ -271,4 +220,86 @@ button:focus {
     cursor: pointer;
     padding: 8px 12px;
     margin-left: 150px;
+}
+
+@media (max-width: 700px) {
+
+    .sub-heading {
+      font-size: 15px;
+      padding: 0 100px;
+    }
+
+    .btn {
+        padding: 8px 20px;
+        font-size: 10px;
+    }
+
+    .home {
+        padding: 10px 20px;
+        margin: 10px 0;
+    }
+
+    .home-title {
+        font-size: 20px;
+    }
+
+    .home-text {
+        font-size: 10px;
+        line-height: 20px;
+        text-align: center;
+    }
+
+}
+
+
+.grid-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+}
+
+@media (max-width: 700px) {
+
+    .grid-3 {
+      grid-template-columns: 1fr;
+    }
+}
+
+.my-3 {
+    margin: 3rem 0;
+}
+
+.ml-3 {
+    margin-left: 7rem;
+}
+
+.card-1 {
+    background-color: #fff;
+    width: 250px;
+    border-radius: 5px;
+    margin-bottom: 40px;
+}
+
+.card-1-top {
+    width: 250px;
+    height: 150px;
+    border-radius: 5px;
+}
+
+.card-1-img {
+    width: 100%;
+    height: 100%;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.card-1-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-1-title {
+    color: var(--primary-color);
 }
