--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
-    --modal-duration: 1s;
     --primary-color: #003b00;
     --secondary-color: #00b100;
 }
@@ -168,6 +167,10 @@ button:focus {
     color: var(--primary-color);
 }
 
+.modal-2 {
+    width: 1250px;
+}
+
 .modal-1:focus,
 .modal-2:focus {
     outline: none;
@@ -205,6 +208,14 @@ button:focus {
     padding: 20px;
 }
 
+.modal-2-content {
+    padding: 20px;
+}
+
+.modal-2-content p {
+    font-weight: 300;
+}
+
 .modal-1-form div {
     margin: 15px 0;
 }
@@ -219,6 +230,11 @@ button:focus {
     width: 100%;
 }
 
+.modal-2-content h4 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .form-input:focus {
     outline-color: var(--secondary-color);
 }
@@ -231,6 +247,24 @@ button:focus {
     padding: 8px 12px;
     margin-left: 150px;
     font-size: 16px;
+}
+
+@media (max-width: 1250px) {
+    .modal-2 {
+        width: auto;
+    }
+
+    .modal-2-content {
+        padding: 0;
+    }
+
+    .modal-2-content p {
+        font-size: 10px;
+    }
+
+    .modal-2-content h4 {
+        margin-bottom: 2px;
+    }
 }
 
 @media (max-width: 700px) {
@@ -335,4 +369,60 @@ button:focus {
     margin-bottom: 20px;
     padding: 8px 15px;
     font-size: 15px;
+}
+
+.search-box {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform:  translate(-50%,50%);
+    background: #fff;
+    height: 60px;
+    border-radius: 5px;
+    padding: 10px;
+    color: var(--primary-color);
+    margin-bottom: 40px;
+}
+
+.search-box:hover > .search-input {
+    width: 240px;
+    padding: 0 6px;
+}
+
+.search-box:hover > .search-button {
+  background: white;
+  color: var(--secondary-color);
+}
+
+.search-button {
+    color: white;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    background: var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+}
+
+.search-input {
+    border:none;
+    background: none;
+    outline:none;
+    float:left;
+    padding: 0;
+    color: var(--primary-color);
+    font-size: 20px;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 0px;
+}
+
+@media screen and (max-width: 620px) {
+.search-box:hover > .search-input {
+    width: 150px;
+    padding: 0 6px;
+}
 }
