--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 :root {
     --primary-color: #003b00;
@@ -10,7 +11,7 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     transition: transform 0.3s ease;
     background-color: var(--primary-color);
@@ -98,7 +99,7 @@ header p {
 button {
     background-color: var(--secondary-color);
     border: 0;
-    border-radius: px;
+    border-radius: 5px;
     color: #fff;
     cursor: pointer;
     padding: 8px 12px;
@@ -151,6 +152,9 @@ button:focus {
     color: var(--primary-color);
 }
 
+.home h2 {
+    font-weight: 500;
+}
 
 .modal-1,
 .modal-2 {
@@ -447,8 +451,7 @@ button:focus {
 
 .card-2 {
     margin-bottom: 2rem;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    border-radius: 5px;
     border-style: solid;
     border-width: 2px;
     border-color: var(--primary-color);
@@ -490,4 +493,10 @@ button:focus {
     font-size: 25px;
     line-height: 40px;
     margin-bottom: 0px;
+}
+
+.card-2-btn {
+    margin-top: 20px;
+    padding: 15px 19px;
+    font-size: 17px;
 }
