--- a/src/App.css
+++ b/src/App.css
@@ -517,9 +517,28 @@ button:focus {
 .modal-3 {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-image: linear-gradient( to right bottom,rgb(0,59,0,0.8),rgb(0,177,0,0.8));
+    z-index: 2;
 }
 
-.close-btn-2 {
-    color: var(--primary-color);
+.modal-3-tltle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+    font-size: 25px;
+}
+
+.modal-3-img {
+    width: 60px;
+    height: 60px;
+    margin: 0 7px;
+}
+
+.modal-3-content {
+    padding: 0 50px;
+    color: #fff;
+    font-size: 14px;
 }
