--- a/src/App.css
+++ b/src/App.css
@@ -451,6 +451,13 @@ button:focus {
     min-height: 90vh;
 }
 
+.error-msg {
+    text-align: center;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    margin-top: 60px;
+}
+
 .card-2 {
     margin-bottom: 2rem;
     border-radius: 5px;
