--- a/src/App.css
+++ b/src/App.css
@@ -573,7 +573,7 @@ button:focus {
 
 .footer-nav-link {
     font-weight: 300;
-    cursor: pointer
+    cursor: pointer;
     font-size: 20px;
 }
 
