--- a/src/App.css
+++ b/src/App.css
@@ -526,6 +526,30 @@ button:focus {
     border-bottom: 2px solid var(--primary-color);
 }
 
+@media (min-width: 1700px) {
+
+    .card-2-bottom {
+        height: 45rem;
+    }
+
+    .card-2-title {
+        font-size: 45px;
+        line-height: 70px;
+        margin-left: 55px;
+    }
+
+    .card-2-info {
+        font-size: 25px;
+        margin-right: 0;
+        padding: 0;
+    }
+
+    .card-2-btn {
+        margin-left: 85px;
+    }
+    
+}
+
 .modal-3 {
     width: 100%;
     height: 100%;
@@ -553,6 +577,22 @@ button:focus {
     padding: 0 50px;
     color: #fff;
     font-size: 14px;
+}
+
+@media (min-width: 1700px) {
+
+    .modal-3-tltle {
+        font-size: 40px;
+    }
+
+    .modal-3-content {
+        font-size: 18px;
+    }
+    
+    .modal-3-content-pl {
+        padding: 0 90px;
+        font-size: 20px;
+    }
 }
 
 .footer {
