--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ button:focus {
 }
 
 @media (max-width: 1250px) {
+    
     .modal-2 {
         width: auto;
     }
@@ -436,8 +437,31 @@ button:focus {
     background-color: transparent;
     position: absolute;
     left: 71%;
-    top: 5%;
-    
+    top: 5%; 
+}
+
+@media (max-width: 750px) {
+
+    .search-input {
+        padding: 8px 20px;
+    }
+
+    .search-button {
+        left: 69%;
+        top: 5%; 
+    }
+}
+
+@media (max-width: 500px) {
+
+    .search-input {
+        padding: 5px 15px;
+    }
+
+    .search-button {
+        left: 67%;
+        top: 5%; 
+    }
 }
 
 .teams-container {
@@ -550,6 +574,19 @@ button:focus {
     
 }
 
+@media (max-width: 700px) {
+
+    .teams-container {
+        width: 100%;
+        padding: 10px 20px;
+        margin-top: 50px;
+    }
+
+    .card-2 {
+        margin-right: 50px;
+    }
+}
+
 .modal-3 {
     width: 100%;
     height: 100%;
@@ -586,6 +623,7 @@ button:focus {
     }
 
     .modal-3-content {
+        padding: 0 80px;
         font-size: 18px;
     }
     
@@ -641,4 +679,18 @@ button:focus {
     width: 70%;
     font-weight: 200;
     color: #e7e7e7;
+}
+
+@media (min-width: 1700px) {
+
+    .footer-nav-link {
+        margin-left: 90px;
+    }    
+}
+
+@media (max-width: 700px) {
+
+    .footer-nav-link {
+        margin-left: 0px;
+    }    
 }
