--- a/src/App.css
+++ b/src/App.css
@@ -515,9 +515,8 @@ button:focus {
 
 .card-2-bottom {
     height: 30rem;
-    width: 20rem;
-    padding: 1rem 2rem;
-
+    width: auto;
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -530,6 +529,11 @@ button:focus {
     font-size: 25px;
     line-height: 40px;
     margin-bottom: 0px;
+    text-align: center;
+}
+
+.card-2-info {
+    font-size: 15px;
 }
 
 .card-2-btn {
@@ -559,17 +563,14 @@ button:focus {
     .card-2-title {
         font-size: 45px;
         line-height: 70px;
-        margin-left: 55px;
     }
 
     .card-2-info {
         font-size: 25px;
-        margin-right: 0;
-        padding: 0;
     }
 
     .card-2-btn {
-        margin-left: 85px;
+        font-size: 25px;
     }
     
 }
