--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,14 @@ button:focus {
 .grid-4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
+    grid-gap: 2.6rem;
+}
+
+@media (min-width: 1700px) {
+
+    .grid-4 {
+      grid-gap: 5rem;
+    }
 }
 
 @media (max-width: 1150px) {
@@ -327,7 +334,7 @@ button:focus {
 }
 
 .my-3 {
-    margin: 3rem 0;
+    margin: 2rem 0;
 }
 
 .ml-1 {
@@ -347,14 +354,14 @@ button:focus {
 
 .card-1 {
     background-color: #fff;
-    width: 250px;
+    width: 100%;
     border-radius: 5px;
     margin-bottom: 40px;
     box-shadow: 0 7px 28px 0 rgba(255,255,255,0.45)
 }
 
 .card-1-top {
-    width: 250px;
+    width: 100%;
     height: 150px;
     border-radius: 5px;
 }
