--- a/src/App.css
+++ b/src/App.css
@@ -168,11 +168,12 @@ button:focus {
     max-width: 100%;
     width: 400px;
     color: var(--primary-color);
+    overflow-y: auto;
 }
 
 .modal-2 {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
 }
 
 .modal-1:focus,
@@ -596,10 +597,11 @@ button:focus {
 }
 
 .modal-3 {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     background-image: linear-gradient( to right bottom,rgb(48,51,107,0.8),rgb(190,62,221,0.8));
     z-index: 2;
+    overflow-y: auto;
 }
 
 .modal-3-tltle {
